specs/001-short-name-myson/grammar.ebnf
; MYSON grammar (JSON superset with Zen Grid tables and comments)

Document        ::= Value

Value           ::= Object | Array | Table | String | Number | Boolean | Null
Object          ::= '{' Members? '}'
Members         ::= Member (',' Member)* (',')?
Member          ::= Key ':' Value
Key             ::= String | UnquotedKey
Array           ::= '[' Elements? ']'
Elements        ::= Value (',' Value)* (',')?

; Table array using [: ... ]
Table           ::= '[:' TableRows? ']'
TableRows       ::= HeaderRow (';' DataRow)* (';')?
HeaderRow       ::= TableCell (',' TableCell)*
DataRow         ::= TableCell (',' TableCell)*
TableCell       ::= Value | UnquotedValue

; Tokens
String          ::= '"' <JSON string with escapes> '"'
Number          ::= <JSON number literal>
Boolean         ::= 'true' | 'false'
Null            ::= 'null'
UnquotedKey     ::= <ASCII alphanumerics only>
UnquotedValue   ::= <ASCII text excluding unescaped , ; ] } : [ { " \\ > with backslash escapes allowed>

; Comments are removed during lexing wherever whitespace is allowed
; Line: // ... (to end of line)
; Block: /* ... */(* MYSON EBNF - Minimal Yield Schema Object Notation *)

myson_doc    = value ;

value        = object | array | table_array | string | number | boolean | "null" ;

(* Objects: Support standard JSON and unquoted alphanumeric keys *)
object       = "{" [ member { "," member } [ "," ] ] "}" ;
member       = key ":" value ;
key          = string | identifier ;
identifier   = alpha_num_seq ; (* FR-002: ASCII alphanumeric only *)

(* Standard Arrays *)
array        = "[" [ value { "," value } [ "," ] ] "]" ;

(* Zen Grid Table Arrays *)
table_array  = "[:" header_row ";" { data_row ";" } [ data_row ] "]" ;
header_row   = key { "," key } ;
data_row     = value { "," value } ;

(* Primitives & Literals *)
string       = '"' { character } '"' | unquoted_string ;
unquoted_string = { ( any_char - structural_delimiter ) } ; (* FR-010: spaces allowed *)
boolean      = "true" | "false" ; (* FR-013: precedence over strings *)

(* Structural & Trivia *)
structural_delimiter = "," | ";" | ":" | "]" | "}" | "[" | "{" ;
comment      = line_comment | block_comment ;
line_comment = "//" { any_char - "\n" } ;
block_comment = "/*" { any_char } "*/" ;
